[package]
name = "calendar_calculator"
version = "0.1.0"
edition = "2021"
authors = ["emanuele-em"]
description = "The rust_calculator crate is a simple library crate that provides a range of functionalities for calculating distances between two dates expressed in str slice format, as well as adding different durations to a given date. With this crate, users can easily and quickly perform calculations related to dates and distances."
license = "MIT OR Apache-2.0"
keywords = ["date", "calculator", "datetime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
regex = "1.7.1"

